[package]
name = "rs-kvs-streamer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "^1.0" }
async-std = { version = "^1.12" }
async-executor = { version = "~1.8" }
async-tls = { version = "~0.12", features = ["client"], default-features = false }
futures-lite = { version = "^2.2" }
futures = { version = "~0.3" }
aws-credential-types = "1.2.0"
aws-sdk-kinesisvideo = { version = "^1.40", default-features = false, features = ["rt-tokio"] }
aws-sdk-sts = { version = "^1.39" }
aws-sigv4 = { version = "^1.2" }
aws-smithy-runtime = { version = "^1.7" }
aws-smithy-runtime-api = { version = "^1.7" }
chrono = { version = "~0.4" }
clap = { version = "^4.5", features = ["derive"] }
dotenv = { version = "~0.15" }
ebml-iterable = { version = "~0.6" }
webm-iterable = { version = "~0.6" }
env_logger = { version = "~0.11" }
h264-reader = { version = "~0.7" }
http = { version = "~0.2" }
httparse = { version = "^1.0" }
jpeg-decoder = { version = "~0.3" }
log = { version = "~0.4" }
opencv = { version = "~0.92" }
openh264 = { version = "~0.6" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
tokio = { version = "^1.39", default-features = false, features = ["rt"] }
toml = { version = "~0.8" }
uuid = { version = "^1.10", features = ["v4"] }
